<resources>
    <string name="app_name">AppTodoList</string>
    <string name="criar_tarefa">Criar Tarefa</string>
    <string name="cancelar">Cancelar</string>
    <string name="label_title">Titulo</string>
    <string name="label_description">Descrição</string>
    <string name="label_hour">Hora</string>
    <string name="label_date">Data</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_description_new_task">Nova tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_you_dont_have_tasks">Ops! Você não possui \ nenhuma tarefa</string>
</resources>